--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,4 +16,6 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.108", features = ["diff"] }
 
 [dependencies]
-# TODO
+syn = { version = "2.0.108", features = ["full", "extra-traits"] }
+quote = "1.0.41"
+proc-macro2 = "1.0.103"
